--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <com.chandan.vecaptchatest.ui.CaptchaView
@@ -12,4 +13,11 @@
         android:layout_height="wrap_content">
     </com.chandan.vecaptchatest.ui.CaptchaView>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/bt_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="test"
+        android:layout_gravity="center"/>
+</LinearLayout>
